--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
     "react-helmet-async": "^1.3.0",
